Fix styling for Shiki component and add overflow stories

--- a/packages/recomp-shiki/shiki.scss
+++ b/packages/recomp-shiki/shiki.scss
@@ -11,6 +11,11 @@
       padding: 1em;
       margin: .5em 0;
 
+      code {
+        overflow: auto;
+        flex-grow: 1;
+      }
+
       &.line-numbers {
         code {
           counter-reset: step;
